--- a/app/src/main/res/layout/activity_bridge.xml
+++ b/app/src/main/res/layout/activity_bridge.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <cn.ymex.kitx.widget.webview.BrowserView
         android:id="@+id/vBrowser"
         android:layout_width="match_parent"
